# poke-gol-rewrite

./: Cargo.toml  README.md
src/: main.rs
src/engine/: mod.rs  term.rs
src/game/: cells.rs  mod.rs  run.rs  types.rs
