[package]
name = "poke-gol-rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ctrlc = "3.4.1"
env_logger = "0.10.1"
futures = "0.3.29"
log = "0.4.20"
owo-colors = "3.5.0"
rand = "0.8.5"
wgpu = "0.18.0"
winit = "0.29.4"
